fixed accent mobile, fixed dropdown, fixed compact view alignment

--- a/reader/static/css/main.css
+++ b/reader/static/css/main.css
@@ -1693,7 +1693,6 @@ _:-webkit-full-screen:not(:root:root), .fit-height_limit .rdr-image-wrap .Reader
 }
 
 .SettingUnit.compact .ButtonGroup {
-	justify-content: right;
 	margin-bottom: 0;
 }
 
@@ -1960,7 +1959,7 @@ _:-webkit-full-screen:not(:root:root), .fit-height_limit .rdr-image-wrap .Reader
 
 .t-row {
 	display: flex;
-	justify-content: left;
+	justify-content: flex-end;
 	flex-wrap: nowrap;
 	width: 100%;
 	margin: 0.7rem 0;
@@ -2395,7 +2394,7 @@ _:-webkit-full-screen:not(:root:root), .fit-height_limit .rdr-image-wrap .Reader
 		bottom: 0 !important;
 	}
 	.rdr-page-selector .preloaded {
-		border-bottom-color: #6699b9;
+		border-bottom-color: var(--accentCol);
 	}
 
 	.rdr-groups {
@@ -3157,7 +3156,7 @@ body, button, button:before {
   position: absolute;
   background-color: var(--sidebarCol);
   min-width: 190px;
-  max-height: 240px;
+  /*max-height: 33vh;*/
   overflow-x: hidden;
   overflow-y: auto; 
   box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
@@ -3168,7 +3167,7 @@ body, button, button:before {
 .dropdown-content a {
   color: var(--textCol);
   padding: 0 11px;
-  height: 2.2em;
+  height: 35px;
   display: flex;
   font-size: 0.8em;
   align-items: center;
